--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   },
   "author": "",
   "license": "ISC",
-  "homepage": "https://realtorspendingforpassions.herokuapp.com/"
+  "homepage": "https://realtorspendingforpassions.herokuapp.com/",
+  "dependencies": {
+    "dotenv": "^16.0.3"
+  }
 }
