Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch master
Your branch is up to date with 'origin/master'.

Changes to be committed:
	modified:   api/index.js
	modified:   client/package-lock.json
	modified:   client/package.json

--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
   "license": "ISC",
   "homepage": "https://realtorspendingforpassions.herokuapp.com/",
   "dependencies": {
-    "@googlemaps/js-api-loader": "^1.14.3"
+    "@googlemaps/js-api-loader": "^1.14.3",
+    "axios": "^1.2.0"
   },
   "devDependencies": {
     "dotenv": "^16.0.3"
